--- a/app/src/main/res/layout/item_movie_details.xml
+++ b/app/src/main/res/layout/item_movie_details.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="180dp"
     app:cardCornerRadius="15dp"
+    android:id="@+id/content_movie_item"
     app:cardUseCompatPadding="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout
