--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/nav"
-    app:startDestination="@id/nav_movie_details">
+    app:startDestination="@id/nav_movie_list">
 
     <fragment
         android:id="@+id/nav_movie_details"
@@ -12,7 +12,7 @@
         android:name="com.magdalena.movietoday.presentation.movieList.MovieListFragment"
         android:label="MovieListFragment" >
         <action
-            android:id="@+id/action_movieListFragment_to_movieDetailsFragment"
+            android:id="@+id/toMovieDetails"
             app:destination="@id/nav_movie_details" />
         <argument
             android:name="movieId"
