--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,4 +12,5 @@
     <dimen name="tag_dream">12sp</dimen>
     <dimen name="image_view_pin_code">134dp</dimen>
     <dimen name="size_progress_bar">80dp</dimen>
+    <dimen name="top_bar_height">56dp</dimen>
 </resources>
